--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/clinic_db
+    url: jdbc:mysql://localhost:3306/user_db
     username: root
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
